# Rpi-Pico-controller-for-OpenRails

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
CAD/: Base.20250911-204133.FCBak  Base.FCStd  BasePanelBack.FCStd  BasePanelFront.FCStd  BasePanelSide.FCStd  CustomPartsOnlyAssembly.FCStd  EngineBreakBase.FCStd  EngineBreakLever.FCStd  LeverDirection.FCStd  LeverSlotDirection.FCStd  LeverSlotThrottle.FCStd  LeverSmall.FCStd  LeverThrottle.FCStd  LeverTrainBreak.FCStd  Nut5mm.FCStd  OpenRailsController.FCStd  OpenRailsControllerFullBody.FCStd  PauseButton.FCStd  Potentiometer_B10K.FCStd  Screw5mm.FCStd  SwtichRotary.FCStd  VoltMeter.FCStd
CAD/STEP/: Base.step
CAD/STL/: CustomPartsOnlyAssembly.stl  EngineBreakBase-Body.stl  EngineBreakLever-Body-v2.stl  EngineBreakLever-Body.stl  LeverDirection-Body.stl  LeverSlotDirection-Body.stl  LeverSlotThrottle-Body.stl  LeverThrottle-Body.stl  LeverTrainBreak-Body.stl
docs/: BOM.xlsx  Manual_SK.docx
legacySrc/: main.c
src/: _unused_callbacks.c  blink.cpp  blink.h  main.c  main.cpp  main.rs  report.c  report.h  sensors.c  sensors.h  tusb_config.h
